fix(command): list height is trimmed on mobile

--- a/styles/command.scss
+++ b/styles/command.scss
@@ -170,6 +170,10 @@
     border-bottom-left-radius: 0px;
     border-bottom-right-radius: 0px;
   }
+
+  [cmdk-list] {
+    max-width: none;
+  }
 }
 
 @media (min-height: 1100px) {
